start second Activity
putExtra

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    >
+    tools:context=".QuizActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,6 +30,12 @@
             android:text="@string/false_button"
             android:id="@+id/false_button" />
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cheat_button"
+        android:id="@+id/cheat_button" />
 
     <Button
         android:layout_width="wrap_content"
